--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  height: 100%;
+  -webkit-overflow-scrolling: auto;
 }
 
 .disabled {
